feat: 完成资产概览

--- a/src/Sophon.Web/appsettings.json
+++ b/src/Sophon.Web/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLite": "Data Source = c:\\db\\sqlite\\sophon.db"
+    "SQLite": "Data Source = c:\\LocalDB\\sophon.db"
   }
 }
