--- a/src/Sophon.Web/Sophon.Web.csproj
+++ b/src/Sophon.Web/Sophon.Web.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
@@ -16,10 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Sophon.Infrastructure\Sophon.Infrastructure.csproj" />
     <ProjectReference Include="..\Sophon.Toolkit\Sophon.Toolkit.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
