feat: 新增资产记录

--- a/src/Sophon.Web/Sophon.Web.csproj
+++ b/src/Sophon.Web/Sophon.Web.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Sophon.Toolkit\Sophon.Toolkit.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\plugins\layer-v3.1.1\mobile\layer.js" />
+  </ItemGroup>
+
 </Project>
