--- a/src/Sophon.Web/Sophon.Web.csproj
+++ b/src/Sophon.Web/Sophon.Web.csproj
@@ -18,6 +18,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Sinks.SQLite" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
