--- a/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
+++ b/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
+    <PackageReference Include="Sophon.Toolkit" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
