feat: 新增日志图标展示

--- a/src/Sophon.Web/Sophon.Web.csproj
+++ b/src/Sophon.Web/Sophon.Web.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Framework\Sophon.DV\Sophon.DV.Echarts\Sophon.DV.Echarts.csproj" />
     <ProjectReference Include="..\Sophon.Infrastructure\Sophon.Infrastructure.csproj" />
   </ItemGroup>
 
