--- a/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
+++ b/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
@@ -7,7 +7,10 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
-    <PackageReference Include="Sophon.Toolkit" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Framework\Sophon.Toolkit\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
   </ItemGroup>
 
 </Project>
