feat: 临时提交，数据库从sqlite迁移至SqlServer

--- a/src/Sophon.Web/appsettings.json
+++ b/src/Sophon.Web/appsettings.json
@@ -8,6 +8,32 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLite": "Data Source = c:\\LocalDB\\sophon.db"
+    "SQLite": "Data Source = c:\\LocalDB\\sophon.db",
+    "MSSQL": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;",
+          "tableName": "log",
+          "autoCreateSqlTable": true,
+          "columnOptionsSection": {
+            "removeStandardColumns": [ "MessageTemplate" ]
+          }
+        }
+      },
+      {
+        "Name": "Console"
+      }
+    ]
   }
 }
