fix: 日志迁移到SqlServer后的sql问题

--- a/src/Sophon.Web/appsettings.json
+++ b/src/Sophon.Web/appsettings.json
@@ -26,8 +26,11 @@
           "connectionString": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;",
           "tableName": "log",
           "autoCreateSqlTable": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
           "columnOptionsSection": {
-            "removeStandardColumns": [ "MessageTemplate" ]
+            "removeStandardColumns": [ "MessageTemplate", "Properties" ],
+            "addStandardColumns": [ "LogEvent" ] /* Use JSON Column LogEvent */
+            //"removeStandardColumns": [ "Properties" ] /* Remove XML Column Properties */
           }
         }
       },
