--- a/src/Sophon.Web/appsettings.json
+++ b/src/Sophon.Web/appsettings.json
@@ -9,14 +9,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLite": "Data Source = c:\\LocalDB\\sophon.db",
-    "MSSQL": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;"
+    "MSSQL": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;",
   },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Error"
+        "System": "Error",
+        "Hangfire": "Information"
       }
     },
     "WriteTo": [
