--- a/src/Sophon.Web/Sophon.Web.csproj
+++ b/src/Sophon.Web/Sophon.Web.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Hangfire.Core" Version="1.7.17" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.7.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
