--- a/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
+++ b/src/Sophon.Infrastructure/Sophon.Infrastructure.csproj
@@ -8,10 +8,7 @@
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Sophon.Toolkit\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
+    <PackageReference Include="Sophon.Toolkit" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
