--- a/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
+++ b/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
@@ -17,11 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Json\" />
   </ItemGroup>
 
 </Project>
