--- a/App/Assistant/src/Sophon.App.Assistant.Infrastructure/Sophon.App.Assistant.Infrastructure.csproj
+++ b/App/Assistant/src/Sophon.App.Assistant.Infrastructure/Sophon.App.Assistant.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\..\..\Framework\Sophon.Toolkit\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\MSSQL\" />
+  </ItemGroup>
+
 </Project>
