--- a/App/Assistant/src/Sophon.App.Assistant.Web/appsettings.json
+++ b/App/Assistant/src/Sophon.App.Assistant.Web/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLite": "Data Source = c:\\LocalDB\\sophon.db",
-    "MSSQL": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;",
+    "MSSQL": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;"
   },
   "Serilog": {
     "MinimumLevel": {
@@ -25,7 +25,7 @@
         "Name": "MSSqlServer",
         "Args": {
           "connectionString": "Data Source = 127.0.0.1;Initial Catalog = Sophon.Main;User Id = sa;Password = 123456;",
-          "tableName": "log",
+          "tableName": "Log",
           "autoCreateSqlTable": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
           "columnOptionsSection": {
