--- a/Template/Template.RBAC/Template.RBAC.WebApi/appsettings.json
+++ b/Template/Template.RBAC/Template.RBAC.WebApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MSSQL": "Server=localhost;Database=Template.RBAC;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
