feat: add asp.net core identity

--- a/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/appsettings.json
+++ b/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MSSQL": "Server=localhost;Database=Sophon.Identity;User ID=sa;Password=123456;",
+    "SQLite": "Data Source = bin\\Sophon.Identity.db"
+  }
 }
