--- a/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/Sophon.Toolkit.IdentityCenter.WebMvc.csproj
+++ b/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/Sophon.Toolkit.IdentityCenter.WebMvc.csproj
@@ -7,6 +7,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\backend\src\Sophon.Toolkit.IdentityCenter.Infrastructure\Sophon.Toolkit.IdentityCenter.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
