feat: mysql supported

--- a/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/appsettings.json
+++ b/App/IdentityCenter/frontend/Sophon.Toolkit.IdentityCenter.WebMvc/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MSSQL": "Server=localhost;Database=Sophon.Identity;User ID=sa;Password=123456;",
+    "MySql": "Server=127.0.0.1;Port=3306;Uid=root;Password=123456;Database=Sophon.Identity",
     "SQLite": "Data Source = bin\\Sophon.Identity.db"
   }
 }
