--- a/App/IdentityCenter/backend/src/Sophon.Toolkit.IdentityCenter.Infrastructure/Sophon.Toolkit.IdentityCenter.Infrastructure.csproj
+++ b/App/IdentityCenter/backend/src/Sophon.Toolkit.IdentityCenter.Infrastructure/Sophon.Toolkit.IdentityCenter.Infrastructure.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+    <!--<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />-->
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
   </ItemGroup>
 
 </Project>
