--- a/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
+++ b/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Version>1.0.6</Version>
     <Authors>ZhaoBingwang</Authors>
     <PackageProjectUrl>https://github.com/zhaobingwang/Sophon.Toolkit</PackageProjectUrl>
