--- a/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
+++ b/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
