feat: initialize Sophon.Toolkit.Faker

--- a/Framework/Sophon.Toolkit/test/Sophon.Toolkit.Tests.ConsoleApp/Sophon.Toolkit.Tests.ConsoleApp.csproj
+++ b/Framework/Sophon.Toolkit/test/Sophon.Toolkit.Tests.ConsoleApp/Sophon.Toolkit.Tests.ConsoleApp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Sophon.Toolkit.Faker\Sophon.Toolkit.Faker.csproj" />
     <ProjectReference Include="..\..\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
   </ItemGroup>
 
