--- a/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
+++ b/Framework/Sophon.Toolkit/src/Sophon.Toolkit/Sophon.Toolkit.csproj
@@ -19,6 +19,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.9" />
+    <PackageReference Include="QRCoder" Version="1.4.1" />
+    <PackageReference Include="BarcodeLib" Version="2.2.10" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
