--- a/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
+++ b/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>ZhaoBingwang</Authors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <ErrorReport>none</ErrorReport>
   </PropertyGroup>
 
 </Project>
