--- a/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
+++ b/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
     <Authors>ZhaoBingwang</Authors>
   </PropertyGroup>
 
