--- a/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
+++ b/Boxed/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp/Sophon.Boxed.BasicConsoleApp.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <Version>1.0.1</Version>
     <Authors>ZhaoBingwang</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
