--- a/Boxed/Sophon.Boxed.BasicWebApi/Sophon.Boxed.BasicWebApi.Infrastructure/Sophon.Boxed.BasicWebApi.Infrastructure.csproj
+++ b/Boxed/Sophon.Boxed.BasicWebApi/Sophon.Boxed.BasicWebApi.Infrastructure/Sophon.Boxed.BasicWebApi.Infrastructure.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>ZhaoBingwang</Authors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <ErrorReport>none</ErrorReport>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
 </Project>
