--- a/Boxed-Pack/Sophon.Boxed.BasicWebApi.Pack/Sophon.Boxed.BasicWebApi.Pack.csproj
+++ b/Boxed-Pack/Sophon.Boxed.BasicWebApi.Pack/Sophon.Boxed.BasicWebApi.Pack.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="templates\**\*" Exclude="templates\**\bin\**;templates\**\obj\**" />
+    <Content Include="templates\**\*" Exclude="templates\src\**\bin\**;templates\src\**\obj\**;templates\test\Sophon.Boxed.BasicWebApi.Test.ConsoleClient\**;" />
     <Compile Remove="**\*" />
   </ItemGroup>
 
