--- a/Boxed-Pack/Sophon.Boxed.BasicWebApi.Pack/templates/src/Sophon.Boxed.BasicWebApi/Sophon.Boxed.BasicWebApi.csproj
+++ b/Boxed-Pack/Sophon.Boxed.BasicWebApi.Pack/templates/src/Sophon.Boxed.BasicWebApi/Sophon.Boxed.BasicWebApi.csproj
@@ -13,6 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="4.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
