--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSetting": {
+    "SecurityKey": "16fb6c01-8f40-454d-935b-4341ac5cc137",
+    "Issuer": "Sophon.Boxed.BasicWebApp.WebApi",
+    "Audience": "dev-audience",
+    "ExpireSeconds": 1800
+  }
 }
