--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.Domain/Sophon.Boxed.BasicWebApp.Domain.csproj
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.Domain/Sophon.Boxed.BasicWebApp.Domain.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Sophon.Boxed.BasicWebApp</RootNamespace>
   </PropertyGroup>
 
 </Project>
