--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.Application/Sophon.Boxed.BasicWebApp.Application.csproj
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.Application/Sophon.Boxed.BasicWebApp.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Framework\Sophon.Toolkit\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
     <ProjectReference Include="..\Sophon.Boxed.BasicWebApp.Domain\Sophon.Boxed.BasicWebApp.Domain.csproj" />
   </ItemGroup>
 
