feat: efcore repository 临时提交

--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/Sophon.Boxed.BasicWebApp.WebApi.csproj
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/Sophon.Boxed.BasicWebApp.WebApi.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Framework\Sophon.Toolkit\src\Sophon.Toolkit\Sophon.Toolkit.csproj" />
     <ProjectReference Include="..\Sophon.Boxed.BasicWebApp.Application\Sophon.Boxed.BasicWebApp.Application.csproj" />
+    <ProjectReference Include="..\Sophon.Boxed.BasicWebApp.EntityFrameworkCore\Sophon.Boxed.BasicWebApp.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
