--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
@@ -12,5 +12,41 @@
     "Issuer": "Sophon.Boxed.BasicWebApp.WebApi",
     "Audience": "dev-audience",
     "ExpireSeconds": 1800
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}  {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "log/log-.txt",
+                //"outputTemplate": "{NewLine}Date£º{Timestamp:yyyy-MM-dd HH:mm:ss.fff}{NewLine}LogLevel£º{Level}{NewLine}Message£º{Message}{NewLine}{Exception}",
+                "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}  {NewLine}{Exception}",
+                "rollingInterval": "Day"
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Sophon.Boxed.BasicWebApp.WebApi"
+    }
   }
 }
