feat: modify serilog

--- a/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
+++ b/Boxed/Sophon.Boxed.BasicWebApp/src/Sophon.Boxed.BasicWebApp.WebApi/appsettings.json
@@ -14,7 +14,7 @@
     "ExpireSeconds": 1800
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async", "Serilog.Sinks.Console" ],
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Async", "Serilog.Sinks.Console", "Serilog.Filters.Expressions", "Serilog.Settings.Configuration" ],
     "MinimumLevel": {
       "Default": "Verbose",
       "Override": {
@@ -28,6 +28,22 @@
           "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}  {NewLine}{Exception}"
         }
       },
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "logs\\error-.log",
+      //    "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}  {NewLine}{Exception}",
+      //    "rollingInterval": "Day",
+      //    "Filter": [
+      //      {
+      //        "Name": "ByIncludingOnly",
+      //        "Args": {
+      //          "expression": "@Level = 'Error' or @Level = 'Fatal' or @Level = 'Warning'"
+      //        }
+      //      }
+      //    ]
+      //  }
+      //}
       {
         "Name": "Async",
         "Args": {
@@ -35,7 +51,7 @@
             {
               "Name": "File",
               "Args": {
-                "path": "log/log-.txt",
+                "path": "logs/default-.log",
                 //"outputTemplate": "{NewLine}Date£º{Timestamp:yyyy-MM-dd HH:mm:ss.fff}{NewLine}LogLevel£º{Level}{NewLine}Message£º{Message}{NewLine}{Exception}",
                 "outputTemplate": "{Timestamp:HH:mm:ss.fff zzz} [{Level}] {Message}  {NewLine}{Exception}",
                 "rollingInterval": "Day"
